# samwise

./: .gitignore  AGENTS.md  CLAUDE.md  GUIDED-SECRETS-PLAN.md  LLM-PROXY-SWAP.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
Sessions/: 2026-06-22-close-pr-mark-done-web.md  2026-06-24-worker-reliability-llm-opus-push.md
docs/: DEPLOY-MANIFEST.md  REVIEW-MERGE-BUTTON-CHANGE.md  REVIVAL-CONTEXT.md  SELF-SUFFICIENCY-FIXES.md  SLACK-INGRESS-CONTEXT.md  STALL-WATCHDOG-REDESIGN.md  context.md  samwise-root-cause-fixes-20260619.md
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: review.md
src-tauri/src/: lib.rs  main.rs  process.rs  report_server.rs  state.rs
src-tauri/src/commands/: ai.rs  chat.rs  claude_code.rs  dev_server.rs  doppler.rs  files.rs  git.rs  health.rs  hello.rs  mcp.rs  mod.rs  orchestrator.rs  playwright.rs  preview.rs  review.rs  settings.rs  supabase.rs  terminal.rs  window.rs  worker.rs
src-tauri/src/models/: file_node.rs  mod.rs
src-tauri/src/preview/: esbuild_runner.rs  http_server.rs  mod.rs  orchestrator.rs  port_allocator.rs  process_manager.rs  tier_detector.rs  watcher.rs
src/lib/: supabase.ts  types.ts
src/lib/ai/: constants.ts  model-registry.ts  types.ts
src/lib/services/: doppler.ts
src/lib/stores/: agents.svelte.ts  agents.ts  automation.svelte.ts  chat.svelte.ts  claude-code.svelte.ts  comments.svelte.ts  conversations.svelte.ts  drag.svelte.ts  file-tree.svelte.ts  file-tree.ts  git.svelte.ts  git.ts  layout.svelte.ts  models.svelte.ts  preview.svelte.ts  preview.ts  projects.svelte.ts  settings.svelte.ts  settings.ts  tasks.svelte.ts  terminals.svelte.ts  theme.svelte.ts  worker.svelte.ts  workspace.svelte.ts  workspace.ts
src/lib/utils/: markdown.ts  (+4 more)
src/routes/: +layout.svelte  +page.svelte
supabase/: config.toml
supabase/migrations/: 20260421174341_ae_agent_schema.sql  20260421203000_ae_tasks_base_branch.sql  20260422120000_ae_tasks_failure_reason.sql  20260422150000_ae_review_gate.sql  20260422200000_ae_tasks_attachments.sql  20260423150000_ae_tasks_callback.sql  20260423160000_ae_tasks_fixes_needed.sql  20260423180000_ae_tasks_review_cycle.sql  20260426120000_add_origin_to_ae_tasks.sql  20260428120000_ae_tasks_on_hold.sql  20260428160000_ae_tasks_commit_message.sql  20260429150000_ae_workers_stale_alert.sql  20260504180000_ae_artifacts.sql  20260504190000_ae_tasks_report_url.sql  20260506142000_ae_task_tombstones.sql  20260515123000_ae_cron_runs.sql  20260518210000_ae_projects_production_url.sql  20260525153500_harden_ae_tasks_inbound_state.sql  20260617210000_ae_tasks_open_origin_dedup.sql
web/: .env.example  package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.html  hooks.server.ts
(+115 files in other folders)
