[package]
name = "banana-code"
version = "0.1.0"
description = "Banana Code IDE - Vibe coding for real developers"
authors = ["Matt Johnston"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "banana_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY for terminal emulation
portable-pty = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI streaming
reqwest = { version = "0.12", features = ["stream", "json"] }
urlencoding = "2"
futures-util = "0.3"

# Built-in preview HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
mime_guess = "2"

# File watching
notify = "7"

# Directory traversal
walkdir = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
encoding_rs = "0.8"
url = "2"
regex = "1"
strip-ansi-escapes = "0.2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
