[package]
name = "agent-one"
version = "0.1.0"
description = "Agent One - Autonomous AI Employee"
authors = ["Matt Johnston"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agent_one_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools", "unstable", "tray-icon"] }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Supabase REST
reqwest = { version = "0.12", features = ["stream", "json"] }
urlencoding = "2"
futures-util = "0.3"

# HMAC-SHA256 for webhook callback signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Directory traversal
walkdir = "2"

# Cron scheduling
cron = "0.15"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
encoding_rs = "0.8"
url = "2"
regex = "1"
strip-ansi-escapes = "0.2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dirs = "5"
which = "6"
libc = "0.2.185"

